--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "overleaf"]
 	path = overleaf
 	url = https://git.overleaf.com/5f2a3a7db4e0910001deacc0
+[submodule "ECC2021"]
+	path = ECC2021
+	url = https://github.com/6lackmitchell/ECC2021.git
